--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~38.0.8",
     "expo-crypto": "~8.2.1",
     "expo-document-picker": "~8.2.1",
+    "expo-media-library": "^8.4.0",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.19.0",
     "native-base": "^2.13.14",
