--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-calendars": "^1.403.0",
     "react-native-elements": "^2.3.2",
+    "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^2.6.2"
+    "react-navigation": "^2.6.2",
+    "@react-native-community/datetimepicker": "2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
