--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^2.6.2"
+    "react-navigation": "^2.6.2",
+    "expo-image-picker": "~8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
