--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "expo": "~38.0.8",
     "expo-crypto": "~8.2.1",
     "expo-document-picker": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
     "expo-media-library": "^8.4.0",
     "expo-status-bar": "^1.0.2",
-    "firebase": "^7.19.0",
+    "firebase": "^7.24.0",
     "native-base": "^2.13.14",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -33,8 +34,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^2.6.2",
-    "expo-image-picker": "~8.3.0"
+    "react-navigation": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
