--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-elements": "^2.3.2",
     "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-modal-datetime-picker": "^9.0.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
